--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn {
+    border-style: solid;
+    border-width: 4px;
+    margin: 0.5rem 1.25rem;
+    color: theme("colors.gray-light");
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    padding: 0.5rem 0.25rem;
+  }
+  .btn-red{
+
+  }
+}
