chore: change fodler strcuture + minor fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,20 @@
     gap: 0.5rem;
     padding: 0.5rem 0.25rem;
   }
-  .btn-red{
-
+  .bg-gradient {
+    background: rgb(3, 65, 97);
+    background: linear-gradient(
+      300deg,
+      rgba(3, 65, 97, 0.28757440476190477) 14%,
+      rgba(86, 53, 74, 0.5984987745098039) 28%,
+      rgba(232, 111, 123, 0.20073967086834732) 31%,
+      rgba(230, 74, 79, 0.1503195028011205) 41%,
+      rgba(204, 57, 57, 0.18393294817927175) 48%,
+      rgba(222, 56, 31, 0.217546393557423) 55%,
+      rgba(215, 120, 71, 0.34079569327731096) 60%,
+      rgba(237, 156, 90, 0.14751838235294112) 65%,
+      rgba(251, 181, 82, 0.1643251050420168) 68%,
+      rgba(3, 65, 97, 0.23435311624649857) 72%
+    );
   }
 }
